Closed
Bug 735944
Opened 14 years ago
Closed 14 years ago
about:support says "incremental gc: 1" when javascript.options.mem.gc_incremental is disabled
Categories
(Toolkit :: General, defect)
Toolkit
General
Tracking
()
VERIFIED
FIXED
mozilla15
People
(Reporter: mbrubeck, Assigned: billm)
References
Details
Attachments
(1 file)
|
638 bytes,
patch
|
terrence
:
review+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Set javascript.options.mem.gc_incremental to false (this is the default in recent nightly builds).
2. Open about:support and scroll to the bottom.
Actual results: "Incremental GC: 1" meaning that incremental GC is enabled.
Expected results: "1" is confusing here because incremental GC is not actually running. Perhaps it should say "0" in this case, or perhaps some other value to indicate that it is disabled by preference.
| Assignee | ||
Updated•14 years ago
|
Assignee: nobody → wmccloskey
| Assignee | ||
Comment 1•14 years ago
|
||
Attachment #622524 -
Flags: review?(terrence)
Comment 2•14 years ago
|
||
Comment on attachment 622524 [details] [diff] [review]
patch
Review of attachment 622524 [details] [diff] [review]:
-----------------------------------------------------------------
The state space here is getting rather large.
Attachment #622524 -
Flags: review?(terrence) → review+
| Assignee | ||
Comment 3•14 years ago
|
||
Target Milestone: --- → mozilla15
Comment 4•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Comment 5•14 years ago
|
||
Verified as fixed on Firefox Aurora(20120609042006) and Nightly(20120611030526).
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•