Bug 735944 - about:support should show 0 when incremental GC disabled (r=terrence)